# credit-risk-ml

./: README.md  next_step.md  pyproject.toml  requirements.txt
artifacts/tuned/: lightgbm_tuned.pkl  logistic_regression_tuned.pkl  random_forest_tuned.pkl  results_summary.csv  xgboost_tuned.pkl
notebooks/: 01_eda.ipynb  visualizations_baselines.ipynb  visuiliztions_tuned_models.ipynb
src/: config.py  data.py  preprocessing.py
src/evaluation/: evaluator.py  metrics.py  persistence.py  results.py
src/experiments/: run_baselines.py  run_tuned_models.py
src/models/: lightgbm.py  logistic_regression.py  random_forest.py  xgboost.py
src/visualization/: plots.py
testings/: data_loader_test.py
