[project]
name = "credit-risk-ml"
version = "0.1.0"
description = "Credit Risk / Loan Default Prediction project"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "xgboost>=3.1.2",
    "lightgbm>=4.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
